# InterviewAgent

./: .env.example  .gitignore  AGENTS.md  README.md  __init__.py  __main__.py  adapter.py  analyzer.py  cognitive.py  comment.md  config.py  defination.md  engine.py  env_setup.md  example_usage.py  features.py  main.py  models.py  openapi.yaml  pr1-latest.diff  pr1.diff  pyproject.toml  question_bank.json  requirements.txt  测试1.md
.github/workflows/: ci.yml
apps/api/: config.py  dependencies.py  main.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/libs/: env_loader.py  observability.py  question_sets.py  readiness.py
backend/migrations/: env.py
backend/scripts/: __init__.py  (+1 more)
docs/: 00_overview.md  01_architecture.md  02_state_machine.md  03_data_model.md  04_api_contract_mapping.md  05_turn_pipeline.md  06_scaffolding_engine.md  07_scoring_engine.md  08_safety.md  09_question_bank_and_rubrics.md  10_observability_event_export.md  11_deployment.md  12_repo_structure.md  13_model_and_package_conventions.md  16_production_readiness_gap.md  README.md  openapi.yaml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
infra/: Caddyfile  compose.prod.yml  docker-compose.yml  prod.env.example
project/: dashscope_model.py  qwen_model.py
src/: .env  __init__.py  evaluation.py  models.py  question_module.py  scaffold.py  state_machine.py  utils.py
tests/: test_llm_connection.py  测试1.md
(+162 files in other folders)
